06-Apr-2015 Laurent Duflot
	* mc14_13TeV_MCSampleList.py, mc14_13TeV_lYjets.xxx: add Sherpa gamma+jet MassiveCB samples

06-Apr-2015 Laurent Duflot
	* MCEventVeto, ZeroLeptonSR, ZeroLeptonCRWT: change mc12VetoCode to mcVetoCode
	* ZeroLeptonSR, ZeroLeptonCRWT: test MC veto code also for period p13tev
	* tag ZeroLeptonRun2-00-00-25


04-Apr-2015 Laurent Duflot
	* launch_jobs_on_grid.py, zerolepton.config, zerolepton_with_syst.config: add support for AtlFast samples
	* BuildSUSYObjects: make sure all containers have the suffix in their name, add option to do the overlap removal with photons
	* tag ZeroLeptonRun2-00-00-24

02-Apr-2015 Laurent Duflot
	* DetectorQuality.cxx: default period is 13TeV
	* ZeroLeptonSR, ZeroLeptonCRWT: change decoration to mcAccept for MC vetp
	* MCEventVeto, MCEventVeto: change veto for mc14 (only Sherpa W/Z for now)

01-Apr-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-25 --> few permil on ref ttbar sample
	* launch_jobs_on_grid.py: extract run period from input dataset
	* tag ZeroLeptonRun2-00-00-23

01-Apr-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-23 --> few % on ref ttbar sample
	* PileUpRWProcessor, BuildSUSYObjects, ZeroLeptonDataDrivenQCD, ZeroLeptonSystVariations: change record<blah>(blah*) to record(blah*)
	* revision 658398

31-Mar-2015 Laurent Duflot
	* work in progress to adapt to SUSYTools-00-05-23
	* BuildSUSYObjects: set the Is8TeV SUSYObjDef property
	* PhysObjProxies, PhysObjProxyUtils, PhysObjProxyFiller, BuildSUSYObjects: change decorations from bool to char


31-Mar-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-20 --> no change on ref ttbar sample
	* revision 658249

31-Mar-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-19 --> few % on ref ttbar sample
	* ZeroLeptonRunPeriod: add p13tev
	* ZeroLeptonSR, ZeroLeptonCRWT: make p13tev the default period,
	remove mT2 from OxbridgeKinetics
	* PhysObjProxyUtils: remove mT2 calculation
	* Makefile.RootCore: remove OxbridgeKinetics