@@ -9,6 +9,7 @@
 #include "ZeroLeptonRun2/IsData.h"
 #include "ZeroLeptonRun2/ZeroLeptonSR.h"
 #include "ZeroLeptonRun2/ZeroLeptonCRWT.h"
+#include "ZeroLeptonRun2/ZeroLeptonCRY.h"
 #include "ZeroLeptonRun2/GRLProcessor.h"
 #include "ZeroLeptonRun2/MCEventVeto.h"
 #include "ZeroLeptonRun2/DetectorQuality.h"
@@ -37,6 +38,7 @@
 #ifdef __CINT__
 #pragma link C++ class ZeroLeptonSR+;
 #pragma link C++ class ZeroLeptonCRWT+;
+#pragma link C++ class ZeroLeptonCRY+;
 #endif
 
 #ifdef __CINT__
