@@ -13,6 +13,7 @@ Global.JetCollectionKey: AntiKt4LCTopoJets
 # ---------------------------  Run configuration ----------------------
 cafe.Run:  JobBookeeping cafe::IfPr(datamc) BuildSUSYObjects(susyobjs) 
 +cafe.Run: ZeroLeptonSR(sr) ZeroLeptonCRWT(crwt) ZeroLeptonCRWT(vrwt)
++cafe.Run: BuildSUSYObjects(susyobjsy) ZeroLeptonCRY(cry)
 
 cafe.Input: root://eosatlas.cern.ch//eos/atlas/user/j/jpoveda/r5625_test/AOD.01507244._011801.pool.root.1
 cafe.Output: my.root
@@ -67,3 +68,20 @@ vrwt.cutfile: %{Global.cutfile}
 vrwt.IsVR: TRUE
 vrwt.IsSignal: %{Global.IsSignal}
 vrwt.Period: %{Global.Period}
+
+
+# ---------------------------  Build physics objects -----------------
+susyobjsy.IsData: %{Global.IsData}
+susyobjsy.JetCollectionKey: %{Global.JetCollectionKey}
+susyobjsy.Period: %{Global.Period}
+susyobjsy.IsAtlfast: %{Global.IsAtlfast}
+susyobjsy.PhotonInOR: TRUE
+susyobjsy.suffix: cry
+
+# ---------------------------  CRY Region -----------------
+cry.IsData: %{Global.IsData}
+cry.cutfile: %{Global.cutfile}
+cry.IsSignal: %{Global.IsSignal}
+cry.Period: %{Global.Period}
+cry.suffix: cry
+
