@@ -44,7 +44,7 @@ grl.GRLFile: ${ROOTCOREBIN}/data/SUSYTools/GRL/Summer2013/data12_8TeV.periodAllY
 
 
 # ---------------------------  systematics looper -----------------
-systloop.Run: BuildSUSYObjects(susyobjs) ZeroLeptonSR(sr) ZeroLeptonCRWT(crwt) ZeroLeptonCRWT(vrwt)
+systloop.Run: BuildSUSYObjects(susyobjs) ZeroLeptonSR(sr) ZeroLeptonCRWT(crwt) ZeroLeptonCRWT(vrwt) BuildSUSYObjects(susyobjsy) ZeroLeptonCRY(cry)
 #systloop.SystPrefix: JET_EffectiveNP_1
 
 # ---------------------------  Build physics objects -----------------
@@ -75,3 +75,23 @@ vrwt.IsVR: TRUE
 vrwt.IsSignal: %{Global.IsSignal}
 vrwt.UseSystematics: TRUE
 vrwt.Period: %{Global.Period}
+
+
+# ---------------------------  Build physics objects -----------------
+susyobjsy.IsData: %{Global.IsData}
+susyobjsy.JetCollectionKey: %{Global.JetCollectionKey}
+susyobjsy.Period: %{Global.Period}
+susyobjsy.IsAtlfast: %{Global.IsAtlfast}
+susyobjsy.PhotonInOR: TRUE
+susyobjsy.suffix: cry
+susyobjsy.UseSystematics: TRUE
+
+# ---------------------------  CRY Region -----------------
+cry.IsData: %{Global.IsData}
+cry.cutfile: %{Global.cutfile}
+cry.IsSignal: %{Global.IsSignal}
+cry.Period: %{Global.Period}
+cry.suffix: cry
+cry.UseSystematics: TRUE
+
+
